BPER/DEVF/force-app/main/default/objects/CRM_SDD__c/CRM_SDD__c.object-meta.xml
<CustomObject>
    <label>SDD</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SDD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>