BPER/DEVF/force-app/main/default/objects/CRM_SDD__c/fields/CRM_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>CRM_Beneficiary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Beneficiary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>