BPER/DEVF/force-app/main/default/objects/CRM_SDD__c/fields/CRM_FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>CRM_FinancialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>SDD</relationshipLabel>
    <relationshipName>SDD</relationshipName>
    <type>Lookup</type>
</CustomField>