BPER/DEVF/force-app/main/default/objects/CRM_SDD__c/fields/CRM_InsertionDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_InsertionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insertion Date</label>
    <type>Date</type>
</CustomField>