BPER/DEVF/force-app/main/default/objects/CRM_SDD__c/fields/CRM_MandateCode__c.field-meta.xml
<CustomField>
    <fullName>CRM_MandateCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mandate Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>