BPER/DEVF/force-app/main/default/objects/CRM_SDD__c/fields/CRM_NDG__c.field-meta.xml
<CustomField>
    <fullName>CRM_NDG__c</fullName>
    <formula>CRM_Account__r.CRM_NDG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDG</label>
    <type>Text</type>
</CustomField>